--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="text-sm text-right">
         <p>📞 616-389-3060</p>
-        <p>📧 <a href="mailto:youremail@example.com" class="text-blue-600 hover:underline">youremail@example.com</a></p>
+        <p>📧 <a href="mailto:youremail@example.com" class="text-blue-600 hover:underline">dsalvio0368@gmail.com</a></p>
         <p>🌐 <a href="https://github.com/R2D2Cousin" class="text-blue-600 hover:underline" target="_blank">GitHub</a></p>
       </div>
     </div>
