--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="text-sm text-right">
         <p>📞 616-389-3060</p>
-        <p>📧 <a href="mailto:youremail@example.com" class="text-blue-600 hover:underline">dsalvio0368@gmail.com</a></p>
+        <p>📧 <a href="mailto:youremail@example.com" class="text-blue-600 hover:underline">youremail@example.com</a></p>
         <p>🌐 <a href="https://github.com/R2D2Cousin" class="text-blue-600 hover:underline" target="_blank">GitHub</a></p>
       </div>
     </div>
@@ -27,7 +27,7 @@
     <section class="mb-10">
       <h2 class="text-2xl font-semibold mb-4">About Me</h2>
       <p class="text-gray-700">
-        Certified IT Support Specialist with hands-on experience in building practical tools like password managers, log analyzers, and network scanners. Passionate about problem-solving, Linux systems, and continuous learning.
+        Certified IT Support Specialist with hands-on experience in building practical tools like helpdesk systems, dashboards, and system monitoring solutions. Passionate about problem-solving, Linux systems, and continuous learning.
       </p>
     </section>
 
@@ -46,19 +46,19 @@
       <h2 class="text-2xl font-semibold mb-4">Projects</h2>
       <ul class="space-y-4">
         <li>
-          <strong>Password Manager</strong><br />
-          A secure command-line tool using Python with encryption and password strength checking.<br />
-          🔗 <a href="https://github.com/R2D2Cousin/password-manager" target="_blank" class="text-blue-600 hover:underline">View on GitHub</a>
+          <strong>System Health Dashboard</strong><br />
+          A dashboard for monitoring system performance and health using Python and web technologies.<br />
+          🔗 <a href="https://github.com/R2D2Cousin/System-health-dashboard" target="_blank" class="text-blue-600 hover:underline">View on GitHub</a>
         </li>
         <li>
-          <strong>Network Scanner</strong><br />
-          A Python-based script that identifies live hosts and open ports in a network.<br />
-          🔗 <a href="https://github.com/R2D2Cousin/network-scanner" target="_blank" class="text-blue-600 hover:underline">View on GitHub</a>
+          <strong>Helpdesk Ticketing System</strong><br />
+          A web-based helpdesk system built to track and manage IT support tickets.<br />
+          🔗 <a href="https://github.com/R2D2Cousin/Helpdesk-Ticketing-System" target="_blank" class="text-blue-600 hover:underline">View on GitHub</a>
         </li>
         <li>
-          <strong>Log Analyzer</strong><br />
-          Tool for analyzing and summarizing logs from system files, useful for incident response.<br />
-          🔗 <a href="https://github.com/R2D2Cousin/log-analyzer" target="_blank" class="text-blue-600 hover:underline">View on GitHub</a>
+          <strong>Helpdesk CLI Tool</strong><br />
+          A command-line helpdesk management tool for logging and tracking user-reported issues.<br />
+          🔗 <a href="https://github.com/R2D2Cousin/helpdesk" target="_blank" class="text-blue-600 hover:underline">View on GitHub</a>
         </li>
       </ul>
     </section>
