--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Don Salvio | IT Support Resume</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 
 <body class="bg-gray-100 text-gray-900 font-sans">
@@ -44,23 +45,28 @@
 
     <section class="mb-10">
       <h2 class="text-2xl font-semibold mb-4">Projects</h2>
-      <ul class="space-y-4">
-        <li>
-          <strong>System Health Dashboard</strong><br />
-          A dashboard for monitoring system performance and health using Python and web technologies.<br />
-          🔗 <a href="https://github.com/R2D2Cousin/System-health-dashboard" target="_blank" class="text-blue-600 hover:underline">View on GitHub</a>
-        </li>
-        <li>
-          <strong>Helpdesk Ticketing System</strong><br />
-          A web-based helpdesk system built to track and manage IT support tickets.<br />
-          🔗 <a href="https://github.com/R2D2Cousin/Helpdesk-Ticketing-System" target="_blank" class="text-blue-600 hover:underline">View on GitHub</a>
-        </li>
-        <li>
-          <strong>Helpdesk CLI Tool</strong><br />
-          A command-line helpdesk management tool for logging and tracking user-reported issues.<br />
-          🔗 <a href="https://github.com/R2D2Cousin/helpdesk" target="_blank" class="text-blue-600 hover:underline">View on GitHub</a>
-        </li>
-      </ul>
+      <div class="grid md:grid-cols-2 gap-6">
+        <div class="bg-white p-4 rounded-lg shadow hover:shadow-md">
+          <h3 class="text-xl font-semibold">System Health Dashboard</h3>
+          <p class="text-gray-600">A dashboard for monitoring system performance and health using Python and web technologies.</p>
+          <a href="https://github.com/R2D2Cousin/System-health-dashboard" target="_blank" class="inline-block mt-2 text-blue-600 hover:underline">🔗 GitHub Repo</a>
+        </div>
+        <div class="bg-white p-4 rounded-lg shadow hover:shadow-md">
+          <h3 class="text-xl font-semibold">Helpdesk Ticketing System</h3>
+          <p class="text-gray-600">A web-based helpdesk system built to track and manage IT support tickets.</p>
+          <a href="https://github.com/R2D2Cousin/Helpdesk-Ticketing-System" target="_blank" class="inline-block mt-2 text-blue-600 hover:underline">🔗 GitHub Repo</a>
+        </div>
+        <div class="bg-white p-4 rounded-lg shadow hover:shadow-md">
+          <h3 class="text-xl font-semibold">Helpdesk CLI Tool</h3>
+          <p class="text-gray-600">A command-line helpdesk management tool for logging and tracking user-reported issues.</p>
+          <a href="https://github.com/R2D2Cousin/helpdesk" target="_blank" class="inline-block mt-2 text-blue-600 hover:underline">🔗 GitHub Repo</a>
+        </div>
+        <div class="bg-white p-4 rounded-lg shadow hover:shadow-md">
+          <h3 class="text-xl font-semibold">System Diagnostic Tool</h3>
+          <p class="text-gray-600">A tool to collect and analyze system diagnostics for troubleshooting and maintenance.</p>
+          <a href="https://github.com/R2D2Cousin/system-diagnostic-tool" target="_blank" class="inline-block mt-2 text-blue-600 hover:underline">🔗 GitHub Repo</a>
+        </div>
+      </div>
     </section>
 
     <section class="mb-10">
@@ -68,6 +74,12 @@
       <a href="./Don_Salvio_Resume.pdf" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" download>
         Download PDF
       </a>
+    </section>
+
+    <section class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">Contact Me</h2>
+      <p class="text-gray-700">Feel free to reach out via email for job opportunities or collaborations.</p>
+      <a href="mailto:youremail@example.com" class="text-blue-600 hover:underline">youremail@example.com</a>
     </section>
   </main>
 
