--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Don Salvio | IT Support Resume</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <!-- FontAwesome CDN for icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
 </head>
 
 <body class="bg-gray-100 text-gray-900 font-sans">
@@ -18,7 +23,7 @@
       </div>
       <div class="text-sm text-right">
         <p>📞 616-389-3060</p>
-        <p>📧 <a href="mailto:youremail@example.com" class="text-blue-600 hover:underline">dsalvio0368@gmail.com</a></p>
+        <p>📧 <a href="mailto:dsalvio0368@gmail.com" class="text-blue-600 hover:underline">dsalvio0368@gmail.com</a></p>
         <p>🌐 <a href="https://github.com/R2D2Cousin" class="text-blue-600 hover:underline" target="_blank">GitHub</a></p>
       </div>
     </div>
@@ -33,14 +38,110 @@
     </section>
 
     <section class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">Why I'm the Right Choice</h2>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <p class="text-gray-700 mb-4">As someone who has worked full-time in demanding environments while pursuing a technical degree, I’ve learned to thrive under pressure and adapt quickly. My journey from CNC machining to IT support showcases my ability to pivot, learn, and apply skills in real-world settings.</p>
+
+        <p class="text-gray-700 mb-4">I hold the Google IT Support Professional Certificate and am currently working toward a Bachelor of Science in Game Development at Full Sail University. I’ve also built and documented real-world tools on GitHub, including a Helpdesk Ticketing System, a System Diagnostic Tool, and a System Health Dashboard using technologies like Python, SQLite, Flask, and psutil.</p>
+
+        <p class="text-gray-700 mb-4">My strength lies not only in my technical knowledge but also in my commitment to continuous learning and practical problem-solving. Whether supporting end users, building internal tools, or troubleshooting systems, I approach every task with a learner’s mindset and a drive to deliver value.</p>
+
+        <p class="text-gray-700 mb-4">If you're looking for someone who’s self-motivated, dependable, and ready to hit the ground running in IT support or tech roles, I’m that candidate. I’m excited to bring energy, focus, and real experience to your team.</p>
+
+        <p class="text-gray-700">Let’s connect and see how I can help move your mission forward.</p>
+      </div>
+    </section>
+
+    <section class="mb-10">
       <h2 class="text-2xl font-semibold mb-4">Certifications & Skills</h2>
       <ul class="list-disc list-inside text-gray-700">
-        <li>Google IT Support Certification</li>
-        <li>OSHA Certified</li>
-        <li>Python, C++</li>
-        <li>Linux (Currently Learning)</li>
-        <li>Git & GitHub, CLI Tools</li>
+        <li><i class="fas fa-certificate text-blue-600 mr-2"></i>Google IT Support Certification</li>
+        <li><i class="fas fa-hard-hat text-yellow-500 mr-2"></i>OSHA Certified</li>
+        <li><i class="fab fa-python text-green-600 mr-2"></i>Python</li>
+        <li><i class="fab fa-linux text-gray-700 mr-2"></i>Linux (Currently Learning)</li>
+        <li><i class="fab fa-github text-black mr-2"></i>Git & GitHub</li>
       </ul>
+    </section>
+
+    <section class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">Technical Proficiency</h2>
+      <div class="space-y-4 max-w-md">
+        <div>
+          <p class="font-semibold text-gray-800 mb-1">Python</p>
+          <div class="w-full bg-gray-300 rounded-full h-5">
+            <div class="bg-green-600 h-5 rounded-full" style="width: 85%;"></div>
+          </div>
+        </div>
+        <div>
+          <p class="font-semibold text-gray-800 mb-1">Linux</p>
+          <div class="w-full bg-gray-300 rounded-full h-5">
+            <div class="bg-gray-700 h-5 rounded-full" style="width: 60%;"></div>
+          </div>
+        </div>
+        <div>
+          <p class="font-semibold text-gray-800 mb-1">Troubleshooting</p>
+          <div class="w-full bg-gray-300 rounded-full h-5">
+            <div class="bg-blue-600 h-5 rounded-full" style="width: 80%;"></div>
+          </div>
+        </div>
+        <div>
+          <p class="font-semibold text-gray-800 mb-1">Git & GitHub</p>
+          <div class="w-full bg-gray-300 rounded-full h-5">
+            <div class="bg-black h-5 rounded-full" style="width: 75%;"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">Experience</h2>
+      <div class="space-y-6">
+        <div>
+          <h3 class="text-xl font-semibold">Overnight Stocker & Full-Time Student</h3>
+          <p class="text-gray-600">Walmart – Grand Rapids, MI</p>
+          <p class="text-sm text-gray-500">Until April 2025</p>
+          <ul class="list-disc list-inside text-gray-700 mt-2">
+            <li>Worked full-time overnight shifts while pursuing full-time studies in Information Technology.</li>
+            <li>Maintained stock levels and organized product displays to ensure efficient store operations.</li>
+            <li>Operated inventory equipment and ensured accurate stock replenishment.</li>
+            <li>Provided support to team members and communicated effectively with supervisors.</li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="text-xl font-semibold">CNC Machinist</h3>
+          <p class="text-gray-600">Reed City Group – Reed City, MI</p>
+          <p class="text-sm text-gray-500">Sep 2022 – Oct 2024</p>
+          <ul class="list-disc list-inside text-gray-700 mt-2">
+            <li>Operated CNC machinery with precision and attention to safety standards.</li>
+            <li>Interpreted blueprints and technical drawings to produce high-quality parts.</li>
+            <li>Maintained machines and conducted quality checks to ensure production accuracy.</li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="text-xl font-semibold">Freelance IT Projects</h3>
+          <p class="text-gray-600">Remote</p>
+          <p class="text-sm text-gray-500">2024 – Present</p>
+          <ul class="list-disc list-inside text-gray-700 mt-2">
+            <li>Developed and deployed IT tools like helpdesk ticketing systems, dashboards, and CLI utilities.</li>
+            <li>Maintained GitHub repositories showcasing project code and collaboration efforts.</li>
+            <li>Practiced troubleshooting, documentation, and system monitoring through real-world applications.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">Education</h2>
+      <div class="space-y-6">
+        <div>
+          <h3 class="text-xl font-semibold">Full Sail University</h3>
+          <p class="text-gray-600">Bachelor of Science in Game Development (In Progress)</p>
+        </div>
+        <div>
+          <h3 class="text-xl font-semibold">Community College of Denver</h3>
+          <p class="text-gray-600">Coursework in Criminal Justice – Completed Dec 2021</p>
+        </div>
+      </div>
     </section>
 
     <section class="mb-10">
@@ -78,8 +179,20 @@
 
     <section class="mb-10">
       <h2 class="text-2xl font-semibold mb-4">Contact Me</h2>
-      <p class="text-gray-700">Feel free to reach out via email for job opportunities or collaborations.</p>
-      <a href="mailto:youremail@example.com" class="text-blue-600 hover:underline">youremail@example.com</a>
+      <p class="text-gray-700 mb-4">Feel free to reach out via email or send me a message directly below.</p>
+
+      <form action="https://formspree.io/f/mgebpjyo" method="POST" class="max-w-md space-y-4 bg-white p-6 rounded shadow">
+        <label for="name" class="block text-gray-700 font-semibold mb-1">Name</label>
+        <input type="text" id="name" name="name" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600" />
+
+        <label for="email" class="block text-gray-700 font-semibold mb-1">Email</label>
+        <input type="email" id="email" name="_replyto" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600" />
+
+        <label for="message" class="block text-gray-700 font-semibold mb-1">Message</label>
+        <textarea id="message" name="message" rows="5" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600"></textarea>
+
+        <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Send Message</button>
+      </form>
     </section>
   </main>
 
