--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
   <title>Don Salvio | IT Support Resume</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <!-- FontAwesome CDN for icons -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
 </head>
 
 <body class="bg-gray-100 text-gray-900 font-sans">
@@ -38,59 +33,14 @@
     </section>
 
     <section class="mb-10">
-      <h2 class="text-2xl font-semibold mb-4">Why I'm the Right Choice</h2>
-      <div class="bg-white p-6 rounded-lg shadow">
-        <p class="text-gray-700 mb-4">As someone who has worked full-time in demanding environments while pursuing a technical degree, I’ve learned to thrive under pressure and adapt quickly. My journey from CNC machining to IT support showcases my ability to pivot, learn, and apply skills in real-world settings.</p>
-
-        <p class="text-gray-700 mb-4">I hold the Google IT Support Professional Certificate and am currently working toward a Bachelor of Science in Game Development at Full Sail University. I’ve also built and documented real-world tools on GitHub, including a Helpdesk Ticketing System, a System Diagnostic Tool, and a System Health Dashboard using technologies like Python, SQLite, Flask, and psutil.</p>
-
-        <p class="text-gray-700 mb-4">My strength lies not only in my technical knowledge but also in my commitment to continuous learning and practical problem-solving. Whether supporting end users, building internal tools, or troubleshooting systems, I approach every task with a learner’s mindset and a drive to deliver value.</p>
-
-        <p class="text-gray-700 mb-4">If you're looking for someone who’s self-motivated, dependable, and ready to hit the ground running in IT support or tech roles, I’m that candidate. I’m excited to bring energy, focus, and real experience to your team.</p>
-
-        <p class="text-gray-700">Let’s connect and see how I can help move your mission forward.</p>
-      </div>
-    </section>
-
-    <section class="mb-10">
       <h2 class="text-2xl font-semibold mb-4">Certifications & Skills</h2>
       <ul class="list-disc list-inside text-gray-700">
-        <li><i class="fas fa-certificate text-blue-600 mr-2"></i>Google IT Support Certification</li>
-        <li><i class="fas fa-hard-hat text-yellow-500 mr-2"></i>OSHA Certified</li>
-        <li><i class="fab fa-python text-green-600 mr-2"></i>Python</li>
-        <li><i class="fab fa-linux text-gray-700 mr-2"></i>Linux (Currently Learning)</li>
-        <li><i class="fab fa-github text-black mr-2"></i>Git & GitHub</li>
+        <li>Google IT Support Certification</li>
+        <li>OSHA Certified</li>
+        <li>Python, C++</li>
+        <li>Linux (Currently Learning)</li>
+        <li>Git & GitHub, CLI Tools</li>
       </ul>
-    </section>
-
-    <section class="mb-10">
-      <h2 class="text-2xl font-semibold mb-4">Technical Proficiency</h2>
-      <div class="space-y-4 max-w-md">
-        <div>
-          <p class="font-semibold text-gray-800 mb-1">Python</p>
-          <div class="w-full bg-gray-300 rounded-full h-5">
-            <div class="bg-green-600 h-5 rounded-full" style="width: 75%;"></div>
-          </div>
-        </div>
-        <div>
-          <p class="font-semibold text-gray-800 mb-1">Linux</p>
-          <div class="w-full bg-gray-300 rounded-full h-5">
-            <div class="bg-gray-700 h-5 rounded-full" style="width: 30%;"></div>
-          </div>
-        </div>
-        <div>
-          <p class="font-semibold text-gray-800 mb-1">Troubleshooting</p>
-          <div class="w-full bg-gray-300 rounded-full h-5">
-            <div class="bg-blue-600 h-5 rounded-full" style="width: 60%;"></div>
-          </div>
-        </div>
-        <div>
-          <p class="font-semibold text-gray-800 mb-1">Git & GitHub</p>
-          <div class="w-full bg-gray-300 rounded-full h-5">
-            <div class="bg-black h-5 rounded-full" style="width: 75%;"></div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <section class="mb-10">
@@ -180,20 +130,35 @@
     <section class="mb-10">
       <h2 class="text-2xl font-semibold mb-4">Contact Me</h2>
       <p class="text-gray-700 mb-4">Feel free to reach out via email or send me a message directly below.</p>
-
       <form action="https://formspree.io/f/mgebpjyo" method="POST" class="max-w-md space-y-4 bg-white p-6 rounded shadow">
         <label for="name" class="block text-gray-700 font-semibold mb-1">Name</label>
-        <input type="text" id="name" name="name" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600" />
+        <input type="text" id="name" name="name" required class="w-full border border-gray-300 rounded px-3 py-2" />
 
         <label for="email" class="block text-gray-700 font-semibold mb-1">Email</label>
-        <input type="email" id="email" name="_replyto" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600" />
+        <input type="email" id="email" name="_replyto" required class="w-full border border-gray-300 rounded px-3 py-2" />
 
         <label for="message" class="block text-gray-700 font-semibold mb-1">Message</label>
-        <textarea id="message" name="message" rows="5" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600"></textarea>
+        <textarea id="message" name="message" rows="5" required class="w-full border border-gray-300 rounded px-3 py-2"></textarea>
 
         <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Send Message</button>
       </form>
     </section>
+
+    <section class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">Why You Should Pick Me</h2>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <p class="text-gray-700 mb-4">As someone who has worked full-time in demanding environments while pursuing a technical degree, I’ve learned to thrive under pressure and adapt quickly. My journey from CNC machining to IT support showcases my ability to pivot, learn, and apply skills in real-world settings.</p>
+
+        <p class="text-gray-700 mb-4">I hold the Google IT Support Professional Certificate and am currently working toward a Bachelor of Science in Game Development at Full Sail University. I’ve also built and documented real-world tools on GitHub, including a Helpdesk Ticketing System, a System Diagnostic Tool, and a System Health Dashboard using technologies like Python, SQLite, Flask, and psutil.</p>
+
+        <p class="text-gray-700 mb-4">My strength lies not only in my technical knowledge but also in my commitment to continuous learning and practical problem-solving. Whether supporting end users, building internal tools, or troubleshooting systems, I approach every task with a learner’s mindset and a drive to deliver value.</p>
+
+        <p class="text-gray-700 mb-4">If you're looking for someone who’s self-motivated, dependable, and ready to hit the ground running in IT support or tech roles, I’m that candidate. I’m excited to bring energy, focus, and real experience to your team.</p>
+
+        <p class="text-gray-700">Let’s connect and see how I can help move your mission forward.</p>
+      </div>
+    </section>
+
   </main>
 
   <footer class="bg-white shadow-inner text-center text-sm p-6">
