--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
 
   <main class="max-w-4xl mx-auto px-6 py-10">
     <section class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">Why I'm the Right Choice</h2>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <p class="text-gray-700 mb-4">As someone who has worked full-time in demanding environments while pursuing a technical degree, I’ve learned to thrive under pressure and adapt quickly. My journey from CNC machining to IT support showcases my ability to pivot, learn, and apply skills in real-world settings.</p>
+
+        <p class="text-gray-700 mb-4">I hold the Google IT Support Professional Certificate and am currently working toward a Bachelor of Science in Game Development at Full Sail University. I’ve also built and documented real-world tools on GitHub, including a Helpdesk Ticketing System, a System Diagnostic Tool, and a System Health Dashboard using technologies like Python, SQLite, Flask, and psutil.</p>
+
+        <p class="text-gray-700 mb-4">My strength lies not only in my technical knowledge but also in my commitment to continuous learning and practical problem-solving. Whether supporting end users, building internal tools, or troubleshooting systems, I approach every task with a learner’s mindset and a drive to deliver value.</p>
+
+        <p class="text-gray-700 mb-4">If you're looking for someone who’s self-motivated, dependable, and ready to hit the ground running in IT support or tech roles, I’m that candidate. I’m excited to bring energy, focus, and real experience to your team.</p>
+
+        <p class="text-gray-700">Let’s connect and see how I can help move your mission forward.</p>
+      </div>
+    </section>
+    <section class="mb-10">
       <h2 class="text-2xl font-semibold mb-4">About Me</h2>
       <p class="text-gray-700">
         Certified IT Support Specialist with hands-on experience in building practical tools like helpdesk systems, dashboards, and system monitoring solutions. Passionate about problem-solving, Linux systems, and continuous learning.
@@ -50,19 +64,19 @@
         <div>
           <p class="font-semibold text-gray-800 mb-1">Python</p>
           <div class="w-full bg-gray-300 rounded-full h-5">
-            <div class="bg-green-600 h-5 rounded-full" style="width: 75%;"></div>
+            <div class="bg-green-600 h-5 rounded-full" style="width: 85%;"></div>
           </div>
         </div>
         <div>
           <p class="font-semibold text-gray-800 mb-1">Linux</p>
           <div class="w-full bg-gray-300 rounded-full h-5">
-            <div class="bg-gray-700 h-5 rounded-full" style="width: 30%;"></div>
+            <div class="bg-gray-700 h-5 rounded-full" style="width: 60%;"></div>
           </div>
         </div>
         <div>
           <p class="font-semibold text-gray-800 mb-1">Troubleshooting</p>
           <div class="w-full bg-gray-300 rounded-full h-5">
-            <div class="bg-blue-600 h-5 rounded-full" style="width: 60%;"></div>
+            <div class="bg-blue-600 h-5 rounded-full" style="width: 80%;"></div>
           </div>
         </div>
         <div>
@@ -115,6 +129,13 @@
 
         <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Send Message</button>
       </form>
+    </section>
+
+    <section class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">Download Resume</h2>
+      <a href="./Don_Salvio_Resume.pdf" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" download>
+        Download PDF
+      </a>
     </section>
   </main>
 
