--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <p class="text-gray-700 mb-4">I hold the Google IT Support Professional Certificate and am currently working toward a Bachelor of Science in Game Development at Full Sail University. I’ve also built and documented real-world tools on GitHub, including a Helpdesk Ticketing System, a System Diagnostic Tool, and a System Health Dashboard using technologies like Python, SQLite, Flask, and psutil.</p>
 
-        <p class="text-gray-700 mb-4">My strength lies not only in my technical knowledge but also in my commitment to continuous learning and practical problem-solving. Whether supporting end users, building internal tools, or troubleshooting systems, I approach every task with a learner’s mindset and a drive to deliver value.</p>
+        <p class="text-gray-700 mb-4">My strength lyes not only in my technical knowledge but also in my commitment to continuous learning and practical problem-solving. Whether supporting end users, building internal tools, or troubleshooting systems, I approach every task with a learner’s mindset and a drive to deliver value.</p>
 
         <p class="text-gray-700 mb-4">If you're looking for someone who’s self-motivated, dependable, and ready to hit the ground running in IT support or tech roles, I’m that candidate. I’m excited to bring energy, focus, and real experience to your team.</p>
 
