--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <section class="mb-10">
       <h2 class="text-2xl font-semibold mb-4">Download Resume</h2>
-      <a href="./Don_Salvio_Resume.pdf" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" download>
+      <a href="./Don_Salvio_Resume(3).pdf" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" download>
         Download PDF
       </a>
     </section>
